{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 75,
  "lineage": "3e5dd753-c2f0-80d8-aeea-c95de97c5264",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d39762f070b848c4",
            "arn": "arn:aws:ec2:us-east-1:374103992698:elastic-ip/eipalloc-0d39762f070b848c4",
            "association_id": "eipassoc-0c7274a3933974f33",
            "domain": "vpc",
            "id": "eipalloc-0d39762f070b848c4",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06391f946ff16a5c4",
            "private_dns": "ip-10-0-2-185.ec2.internal",
            "private_ip": "10.0.2.185",
            "public_dns": "ec2-98-88-119-2.compute-1.amazonaws.com",
            "public_ip": "98.88.119.2",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "frauddetectiondemo-aws-eip-6332e013"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-aws-eip-6332e013"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "oracle_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08982f1c5bf93d976",
            "arn": "arn:aws:ec2:us-east-1:374103992698:instance/i-028d0a85ae7a1d05c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-028d0a85ae7a1d05c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "frauddetectiondemo-key-6332e013",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a469209eda4500a4",
            "private_dns": "ip-10-0-1-150.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.150",
            "public_dns": "ec2-34-228-83-205.compute-1.amazonaws.com",
            "public_ip": "34.228.83.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0af6fd5ca8d53f605",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a1d335639a21b54c",
            "tags": {
              "Name": "frauddetectiondemo-oracle-xe"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-oracle-xe"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0dc6f7385f68ea5e0"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.tf_key",
            "aws_security_group.allow_ssh_oracle",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_ami.oracle_ami",
            "data.aws_availability_zones.available",
            "random_id.env_display_id",
            "tls_private_key.rsa-4096-example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374103992698:internet-gateway/igw-0aa3839d41d65644d",
            "id": "igw-0aa3839d41d65644d",
            "owner_id": "374103992698",
            "tags": {
              "Name": "frauddetectiondemo-internet-gateway-6332e013"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-internet-gateway-6332e013"
            },
            "vpc_id": "vpc-002b8a1994de1c998"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d39762f070b848c4",
            "association_id": "eipassoc-0c7274a3933974f33",
            "connectivity_type": "public",
            "id": "nat-0c969060efe2e4b18",
            "network_interface_id": "eni-06391f946ff16a5c4",
            "private_ip": "10.0.2.185",
            "public_ip": "98.88.119.2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07e070b6653a9504f",
            "tags": {
              "Name": "frauddetectiondemo-nat-gateway-6332e013"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-nat-gateway-6332e013"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374103992698:route-table/rtb-0139cd204a594b935",
            "id": "rtb-0139cd204a594b935",
            "owner_id": "374103992698",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c969060efe2e4b18",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "frauddetectiondemo-private-route-table-6332e013"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-private-route-table-6332e013"
            },
            "timeouts": null,
            "vpc_id": "vpc-002b8a1994de1c998"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.natgw",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374103992698:route-table/rtb-063ae4604e995e25c",
            "id": "rtb-063ae4604e995e25c",
            "owner_id": "374103992698",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aa3839d41d65644d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "frauddetectiondemo-public-route-table-6332e013"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-public-route-table-6332e013"
            },
            "timeouts": null,
            "vpc_id": "vpc-002b8a1994de1c998"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_subnet_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9a552cfe7ae8ebc",
            "route_table_id": "rtb-0139cd204a594b935",
            "subnet_id": "subnet-0dad37453c444c54a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_id.env_display_id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037b01c1a4f34ea9f",
            "route_table_id": "rtb-0139cd204a594b935",
            "subnet_id": "subnet-06c6c3542c558e4e5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_id.env_display_id"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce15b339c3328914",
            "route_table_id": "rtb-0139cd204a594b935",
            "subnet_id": "subnet-0371458d27955e8d7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_subnet_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e617294a27589d14",
            "route_table_id": "rtb-063ae4604e995e25c",
            "subnet_id": "subnet-0a1d335639a21b54c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_id.env_display_id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e34fb75eeb4c89ac",
            "route_table_id": "rtb-063ae4604e995e25c",
            "subnet_id": "subnet-07e070b6653a9504f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_id.env_display_id"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f14cea16fff07c2c",
            "route_table_id": "rtb-063ae4604e995e25c",
            "subnet_id": "subnet-06736326e12331e50"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_oracle",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374103992698:security-group/sg-0dc6f7385f68ea5e0",
            "description": "Allow SSH and Oracle inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc6f7385f68ea5e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Oracle EM Express access",
                "from_port": 5500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5500
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Oracle SQL*Net access",
                "from_port": 1521,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1521
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "frauddetectiondemo_allow_ssh_oracle",
            "name_prefix": "",
            "owner_id": "374103992698",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frauddetectiondemo-oracle-sg"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-oracle-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-002b8a1994de1c998"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redshift_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374103992698:security-group/sg-0fa5fd94b5904d40a",
            "description": "Security group for Redshift cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fa5fd94b5904d40a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5439,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5439
              }
            ],
            "name": "frauddetectiondemo-redshift-sg-6332e013",
            "name_prefix": "",
            "owner_id": "374103992698",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frauddetectiondemo-redshift-sg-6332e013"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-redshift-sg-6332e013"
            },
            "timeouts": null,
            "vpc_id": "vpc-002b8a1994de1c998"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374103992698:security-group/sg-094f09358b8e6c4f7",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094f09358b8e6c4f7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9092
              }
            ],
            "name": "frauddetectiondemo-aws-security-group-6332e013",
            "name_prefix": "",
            "owner_id": "374103992698",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frauddetectiondemo-security-group-6332e013"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-security-group-6332e013"
            },
            "timeouts": null,
            "vpc_id": "vpc-002b8a1994de1c998"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "self_ingress_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-2161369824",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-094f09358b8e6c4f7",
            "security_group_rule_id": "sgr-0d428e11e2f206323",
            "self": false,
            "source_security_group_id": "sg-094f09358b8e6c4f7",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg",
            "aws_vpc.main",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374103992698:subnet/subnet-0dad37453c444c54a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dad37453c444c54a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "374103992698",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "frauddetectiondemo-private-0-6332e013"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-private-0-6332e013"
            },
            "vpc_id": "vpc-002b8a1994de1c998"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_id.env_display_id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374103992698:subnet/subnet-06c6c3542c558e4e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c6c3542c558e4e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "374103992698",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "frauddetectiondemo-private-1-6332e013"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-private-1-6332e013"
            },
            "vpc_id": "vpc-002b8a1994de1c998"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_id.env_display_id"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374103992698:subnet/subnet-0371458d27955e8d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0371458d27955e8d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "374103992698",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "frauddetectiondemo-private-2-6332e013"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-private-2-6332e013"
            },
            "vpc_id": "vpc-002b8a1994de1c998"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374103992698:subnet/subnet-0a1d335639a21b54c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1d335639a21b54c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "374103992698",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "frauddetectiondemo-public-0-6332e013",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-public-0-6332e013",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-002b8a1994de1c998"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_id.env_display_id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374103992698:subnet/subnet-07e070b6653a9504f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e070b6653a9504f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "374103992698",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "frauddetectiondemo-public-1-6332e013",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-public-1-6332e013",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-002b8a1994de1c998"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_id.env_display_id"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374103992698:subnet/subnet-06736326e12331e50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06736326e12331e50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "374103992698",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "frauddetectiondemo-public-2-6332e013",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-public-2-6332e013",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-002b8a1994de1c998"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374103992698:vpc/vpc-002b8a1994de1c998",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0901f7461516a41ea",
            "default_route_table_id": "rtb-00905ed3231564b31",
            "default_security_group_id": "sg-0d1dc3c4d2dedfc58",
            "dhcp_options_id": "dopt-0a6321bd33796ebb5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-002b8a1994de1c998",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00905ed3231564b31",
            "owner_id": "374103992698",
            "tags": {
              "Name": "frauddetectiondemo-vpc-6332e013"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-vpc-6332e013"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_class",
      "name": "fraud_demo_load_balancer_controller",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "alb",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {
                  "app.kubernetes.io/name": "LoadBalancerController"
                },
                "name": "alb",
                "resource_version": "1346",
                "uid": "237bb334-51ca-4020-b3d8-8041adfc9f46"
              }
            ],
            "spec": [
              {
                "controller": "eks.amazonaws.com/alb",
                "parameters": []
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eks_access_policy_association.caller_cluster_admin_policy",
            "aws_eks_cluster.eks_cluster",
            "aws_iam_role.cluster",
            "aws_iam_role.node",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSBlockStoragePolicy",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSComputePolicy",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSLoadBalancingPolicy",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSNetworkingPolicy",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "fraud_demo_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "frauddemo/ingress-fraud-demo",
            "metadata": [
              {
                "annotations": {
                  "alb.ingress.kubernetes.io/scheme": "internet-facing",
                  "alb.ingress.kubernetes.io/target-type": "ip"
                },
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "ingress-fraud-demo",
                "namespace": "frauddemo",
                "resource_version": "9122",
                "uid": "858826ca-3666-4d2b-b192-dcc987e60341"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "alb",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "service-fraud-demo",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8080
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/*",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "k8s-frauddem-ingressf-1553bb1fd3-1427826718.us-east-1.elb.amazonaws.com",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": true
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eks_access_policy_association.caller_cluster_admin_policy",
            "aws_eks_cluster.eks_cluster",
            "aws_iam_role.cluster",
            "aws_iam_role.node",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSBlockStoragePolicy",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSComputePolicy",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSLoadBalancingPolicy",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSNetworkingPolicy",
            "aws_instance.oracle_instance",
            "aws_key_pair.tf_key",
            "aws_security_group.allow_ssh_oracle",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_ami.oracle_ami",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "kubernetes_config_map.fraud_demo_config",
            "kubernetes_deployment.fraud_demo",
            "kubernetes_ingress_class.fraud_demo_load_balancer_controller",
            "kubernetes_namespace.demo_namespace",
            "kubernetes_service.fraud_demo_service",
            "random_id.env_display_id",
            "tls_private_key.rsa-4096-example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "demo_namespace",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "frauddemo",
            "metadata": [
              {
                "generation": 0,
                "name": "frauddemo",
                "resource_version": "1347",
                "uid": "883c35ce-6953-4ad7-8ce0-240616621b13"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eks_access_policy_association.caller_cluster_admin_policy",
            "aws_eks_cluster.eks_cluster",
            "aws_iam_role.cluster",
            "aws_iam_role.node",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSBlockStoragePolicy",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSComputePolicy",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSLoadBalancingPolicy",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSNetworkingPolicy",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "fraud_demo_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "frauddemo/service-fraud-demo",
            "metadata": [
              {
                "generation": 0,
                "name": "service-fraud-demo",
                "namespace": "frauddemo",
                "resource_version": "9082",
                "uid": "b11f9be1-0427-4260-bddc-b868a59bfada"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.54.130",
                "cluster_ips": [
                  "172.20.54.130"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 32665,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/name": "fraud-demo"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eks_access_policy_association.caller_cluster_admin_policy",
            "aws_eks_cluster.eks_cluster",
            "aws_iam_role.cluster",
            "aws_iam_role.node",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSBlockStoragePolicy",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSComputePolicy",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSLoadBalancingPolicy",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSNetworkingPolicy",
            "aws_instance.oracle_instance",
            "aws_key_pair.tf_key",
            "aws_security_group.allow_ssh_oracle",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_ami.oracle_ami",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "kubernetes_config_map.fraud_demo_config",
            "kubernetes_deployment.fraud_demo",
            "kubernetes_namespace.demo_namespace",
            "random_id.env_display_id",
            "tls_private_key.rsa-4096-example"
          ]
        }
      ]
    }
  ]
}